# govconnect

./: .gitignore  TODO.md  pyproject.toml
Code/: TODO.md  TODO.txt  index.html  pyproject.toml
Code/govconnect/: manage.py
Code/govconnect/core/: settings.py  urls.py
Code/govconnect/core/settings/: base.py  dev_debug.py
Code/govconnect/govconnect/: asgi.py  settings.py  urls.py  wsgi.py
Code/govconnect/services/: admin.py  models.py  urls.py  views.py
Code/govconnect/services/forms/: add_service.py
Code/govconnect/services/froms/: add_service.py
Code/govconnect/services/migrations/: 0001_initial.py  0004_alter_service_url.py  0005_alter_service_url.py  0007_auto_20211115_1230.py
Code/govconnect/static/css/: main.css  styles.css
Code/govconnect/static/js/: search.js
Code/govconnect/static/scss/: main.scss
Code/govconnect/static/scss/abstracts/: _colours.scss  _external.scss  _fonts.scss  _global.scss  _include-media.scss  _index.scss
Code/govconnect/static/scss/base/: _base.scss  _root.scss
Code/govconnect/templates/: base.html
Code/govconnect/templates/include/: imports.html  navbar.html
Code/govconnect/templates/users/: account.html  base.html  landing.html  login.html  settings.html  two_step_verification.html  user_home.html
Code/govconnect/users/: admin.py  auth.py  backends.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
Code/govconnect/users/migrations/: 0001_initial.py  0002_alter_govconnectuser_address.py  0003_remove_govconnectuser_password.py  0006_auto_20211113_1747.py  0007_alter_govconnectuser_address.py  0008_auto_20211115_0921.py
Documentation/: UML.eddx  (+2 more)
(+54 files in other folders)
