[tool.poetry]
name = "task2_govconnect"
version = "0.1.0"
description = ""
authors = ["Matthias <matthias@weilert.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = {extras = ["argon2", "bcrypt"], version = "^3.2.15"}
psycopg2 = "^2.9.1"
argon2-cffi = "^21.1.0"
bcrypt = "^3.2.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
coverage = "^6.1.1"
pytype = {version = "^2021.11.12", python = "3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
