[tool.poetry]
name = "task2_govconnect"
version = "0.1.0"
description = ""
authors = ["Matthias <matthias@weilert.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-crispy-forms = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
